# ESMA-Baselibs-CMake

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ChangeLog  LibraryVersions.cmake  README.md
cmake/: DetermineESMFCOMM.cmake  DetermineESMFCOMPILER.cmake  GetEnvironmentModules.cmake  InstallDirectoryCheck.cmake  SetColors.cmake
etc/: CMakeLists.txt  MODULES.in
patches/hdf5/: nag.configure.patch
